<resources>
    <string name="app_name">speakenglish</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open_teacher">Open navigation drawer</string>
    <string name="navigation_drawer_close_teacher">Close navigation drawer</string>
    <string name="setting">설정</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="kakao_app_key">9e0fcd84fed383b707133df308f2ca11</string>

    <string name="butttonforrequestpermisson">권한요청 다시하기</string>

    <string name="mentforrequestpermission">\n본 앱을  사용하려면 \n\n 본앱에서
        요구하는  권한을 \n\n  모두   승인해주셔야 합니다\n\n
        더 나은 서비스를 위한 \n\n요청이오니
    따라주시기 바랍니다.! \n\n권한 요청을 다시하려면 \n\n아래 버튼을 눌러주세요!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="requestpermissonimage">전화기이미지</string>


    <!--로그인 api 사용시  영어이름을 요구할때 사용함.-->
    <string name="custom_dialog_loginapi_ment">앱에서 사용할  영어이름을  적어주세요!</string>
    <string name="write_english_name">영어  이름을    적어주세요!</string>



    <!--다이얼로그 사용할때  버튼에 들어갈  스트링-->
    <string name="customdialog_yes">확인</string>
    <string name="customdialog_cancel">취소</string>


    <!--얼굴인식  카메라 엑티비티에서  얼굴인식 성공할때 나오는 멘트-->
    <string name="sucess_face_detection_textview">Success!  Press the Camera button</string>
    <string name="explanation_for_to_make_user_focus_theirface">focus your face in the Camera view</string>
    <string name="face_detection_camera_swap_camera">Swap Camera</string>

    <!--얼굴 인식  앨범 엑티비티에서 사용되는 멘트-->
    <string name="ment_for_album_detection">Get Face Image from My Album</string>
    <string name="ment_for_point_face_detected_photo">Result</string>
    <string name="ment_for_point_original_face_photo">Original photo</string>
    <string name="ment_for_cancel_btn_in_facedetection_albumactivity">Cacncel</string>
    <string name="ment_For_take_this_photo_btn">Take it!</string>
    <string name="ment_for_when_face_detected">This is face! You can take it!</string>


    <!--선생님 카드뷰 리사이클러뷰에 사용되는 텍스트-->
    <string name="teacherlist_for_name">Name</string>
    <string name="teacherforinformnative">전체 Native 선생님들</string>
    <string name="teacherforinformglobal">전체 Global 선생님들</string>
    <string name="teachershortsentencedefault">한줄 소개가 없어요 ㅠ</string>
    <string name="teacherconnectedment">현재 수업 가능 튜터</string>
    <string name="onlineteacherwatching">보러가기  ></string>


    <!--선생님  로그인  조정 관련  멘트-->
   <string name="loginnotification">"Your are Online in 'sayhellow'"</string>

   <!--선생님 새로고침 버튼 멘트 -->
    <string name="teacherrefresh">정보 새로고침</string>
   <string name="teacherrefreshing">새로고침 중</string>
    
    <!--로그인 한  선생님  리스트 엑티비티  멘트들-->
    <string name="teacher_alert_no_onlined_teacher">현재 수업 가능한  선생님이 없습니다.!! \n\n 아래 목록 새로고침 버튼을 눌러주세요!!</string>
    <string name="teacher_onlinelist_cancel_btn">취소</string>
    <string name="teacher_onlinellist_refresh_btn">목록 새로고침</string>
    <string name="ment_for_change_room_profile_image"> &lt; Click that Image to     \n  &#160;&#160;Change your Room Image</string>


    <!--영상 통화  관련 string resource-->
    <string name="switch_camera">Switch front/back camera</string>
    <string name="toggle_mic">Toggle microphone on/off</string>
    <string name="disconnect_call">Disconnect Call</string>
    <string name="pref_maxvideobitratevalue_default">1700</string>
    <string name="pref_videocodec_default">VP8</string>
    <string name="pref_startaudiobitratevalue_default">32</string>
    <string name="pref_audiocodec_default">OPUS</string>
    <string name="channel_error_title">Connection error</string>
    <!--<string name="connecting_to">Connecting to: %1$s</string>-->

    <string name="room_id_caption">ROOM ID:</string>


    <string name="spinner_bank">Select your bank!</string>
</resources>
