<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:layout_height="match_parent"
    android:background="#000"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <org.opencv.android.JavaCameraView
        android:id="@+id/activity_surface_view_for_speakenglish"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0.1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.485" />

    <ImageButton
        android:id="@+id/btnfortakephoto"
        android:layout_width="85dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="#00FDFDFE"
        android:contentDescription="@string/app_name"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/activity_surface_view_for_speakenglish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.985"
        app:srcCompat="@drawable/takephotobtn" />

    <TextView
        android:id="@+id/Mentforpresscamerabtn"
        android:layout_width="365dp"
        android:layout_height="65dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/juache"
        android:gravity="center"
        android:text="@string/sucess_face_detection_textview"
        android:textColor="#FFFFFF"
        android:textSize="21sp"
        app:layout_constraintBottom_toTopOf="@+id/btnfortakephoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.123"
        tools:visibility="invisible" />

    <Button
        android:id="@+id/swapcamera_btn"
        android:layout_width="108dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="564dp"
        android:background="@drawable/roundbuttonforteacher"
        android:fontFamily="@font/juache"
        android:text="@string/face_detection_camera_swap_camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/Mentforpresscamerabtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Mentforpresscamerabtn"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/explanation_for_focus_face"
        android:layout_width="365dp"
        android:layout_height="65dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/explanation_for_to_make_user_focus_theirface"
        android:fontFamily="@font/juache"
        android:gravity="center"
        android:textSize="19sp"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/btnfortakephoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.123" />


</androidx.constraintlayout.widget.ConstraintLayout>