<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D8D5D5"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="155dp"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="128dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardviewonlineteacher"
                        android:layout_width="350dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="-18dp"
                        app:cardBackgroundColor="#FFFFFF"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="3dp"
                        app:cardPreventCornerOverlap="true"
                        app:cardUseCompatPadding="true">

                        <TextView
                            android:id="@+id/textView10"
                            android:layout_width="224dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="15dp"
                            android:fontFamily="@font/juache"
                            android:text="@string/teacherconnectedment"
                            android:textColor="#000"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/onlineteachercount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="25dp"
                            android:fontFamily="@font/dohyun"
                            android:gravity="center"
                            android:textColor="#2154E9"
                            android:textSize="25sp" />

                        <TextView
                            android:id="@+id/textView40"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="110dp"
                            android:fontFamily="@font/juache"
                            android:text="@string/onlineteacherwatching"
                            android:textColor="#000"
                            android:textSize="20sp" />

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textViewforinformnative"
                            android:layout_width="259dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:fontFamily="@font/juache"
                            android:text="@string/teacherforinformnative"
                            android:textColor="#000"
                            android:textSize="20sp" />

                        <Button
                            android:id="@+id/refreshtutortyoefragmentbtn"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:background="@drawable/roundbutton"
                            android:backgroundTint="#7E696967"
                            android:fontFamily="@font/juache"
                            android:text="@string/teacherrefresh" />
                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerviewforativeteacher"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginBottom="30dp">

                    </androidx.recyclerview.widget.RecyclerView>

                    <TextView
                        android:id="@+id/textViewforinformglobal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/juache"
                        android:text="@string/teacherforinformglobal"
                        android:textColor="#000"
                        android:textSize="20sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclervieforglobalteacher"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginBottom="20dp">

                    </androidx.recyclerview.widget.RecyclerView>
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

</LinearLayout>
